# hacs_netgear_lte_sms_manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  VERSIONING.md  chat.json  hacs.json  pyproject.toml  pytest.ini  validate_integration.py
.github/workflows/: validate.yml
custom_components/netgear_lte_sms_manager/: __init__.py  config_flow.py  const.py  coordinator.py  helpers.py  manifest.json  models.py  sensor.py  services.py  services.yaml  strings.json
custom_components/netgear_lte_sms_manager/translations/: en.json
custom_components/netgear_lte_sms_manager/www/: CARD_INSTALLATION.md  index.js  netgear-sms-card.js  netgear-sms-panel.js
tests/: __init__.py  conftest.py  test_command_dispatch.py  test_helpers.py  test_models.py  test_services.py
